--- a/client/views/partials/admin/orderProcess/createTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/createTruckRequest.html
@@ -23,15 +23,16 @@
                         <div class="form-group select-box">
                             <ui-select ng-model="truckRequest.customer" theme="select2"
                                        style="min-width: 390px;"
-                                       title="Customer *"  reset-search-input="false" >
+                                       title="Customer *" reset-search-input="false">
 
                                 <ui-select-match placeholder="Customer *" class="form-control order-form-control">
                                     {{$select.selected.userName || userName}}
                                 </ui-select-match>
                                 <ui-select-choices
-                                                    repeat="truck in truckOwnersList "  refresh="searchAccountOwner($select.search)" refresh-delay="0"  scroll-detector="loadMore()" >
+                                        repeat="truck in truckOwnersList " refresh="searchAccountOwner($select.search)"
+                                        refresh-delay="0" scroll-detector="loadMore()">
                                     <b>
-                                        <div  ng-bind-html="truck.firstName "></div>
+                                        <div ng-bind-html="truck.firstName "></div>
                                     </b>
                                     <small>
                                         Mobile: {{truck.contactPhone || '---'}}
@@ -44,7 +45,7 @@
                     <div class="col-xs-12 col-sm-6" ng-show="truckRequest.customerType=='UnRegistered' ">
                         <div class="form-group styling-input-list">
                             <input type="text" class="form-control custom-form-control" name="fullName"
-                                   ng-model="truckRequest.name"/>
+                                   ng-model="truckRequest.firstName"/>
                             <label class="focus-effect-for-input">Full Name*</label>
                         </div>
                     </div>
@@ -53,7 +54,7 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group styling-input-list">
                             <input type="text" class="form-control custom-form-control" name="mobile"
-                                   ng-model="truckRequest.contactPhone[0]"/>
+                                   ng-model="truckRequest.contactPhone"/>
                             <label class="focus-effect-for-input">Mobile*</label>
                         </div>
                         <div class="form-group styling-input-list">
@@ -130,13 +131,13 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-3">
-                        <div class="form-group styling-input-list">
+                        <!--<div class="form-group styling-input-list">
                             <select class="form-control order-form-control"
                                     ng-model="truck.goodsType">
                                 <option value="">Goods type</option>
                                 <option ng-repeat="goodsType in goodsTypesList">{{goodsType.title}}</option>
                             </select>
-                        </div>
+                        </div>-->
                         <div class="form-group styling-input-list">
                             <input type="text" class="form-control order-form-control" name="comment"
                                    ng-model="truck.comment"/>
@@ -148,7 +149,7 @@
                             <select class="form-control order-form-control"
                                     ng-model="truck.truckType">
                                 <option value="">Truck type</option>
-                                <option ng-repeat="truckTypes in truckTypesList">
+                                <option ng-repeat="truckTypes in truckTypesList" value="{{truckTypes._id}}">
                                     {{truckTypes.title}}/{{truckTypes.tonnes}}Tons
                                 </option>
 
