--- a/client/views/partials/admin/customers/transporters.html
+++ b/client/views/partials/admin/customers/transporters.html
@@ -4,7 +4,7 @@
         </li>
         <li class="pull-right col-xs-3">
             <select class="form-control" ng-model="status1" ng-change="initTransporter(status1);">
-                <option value="" selected>Search by Status</option>
+                <option value="" selected>--Filter by Status--</option>
                 <option value="true">Enabled</option>
                 <option value="false">Disabled</option>
                 <option value="gps">GPS Users</option>
