--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -43,7 +43,7 @@
                             <input type="text" class="form-control custom-form-control" placeholder="address" ng-model="deviceDetails.address"/>
                         </div>
                         <div class="form-group">
-                            <p class="smsenabled">Is Damaged</p>
+                            <p class="smsenabled">Is Damaged</p>{{deviceDetails.isDamaged}}
                             <ul class="list-inline">
                                 <li>
                                     <div class="radio">
@@ -66,7 +66,7 @@
                             </ul>
                         </div>
                         <div class="form-group">
-                            <p class="smsenabled">Is Active*:</p>
+                            <p class="smsenabled">Is Active*:</p>{{deviceDetails.isActive}}
                             <ul class="list-inline">
                                 <li>
                                     <div class="radio">
