--- a/client/views/partials/admin/customers/truckOwners.html
+++ b/client/views/partials/admin/customers/truckOwners.html
@@ -12,11 +12,19 @@
             </select>
         </li>
         <li class="col-xs-4 pull-right">
-            <div class="input-group">
+            <form role="search">
+                <div class="input-group add-on">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="truckOwnerSearch">
+                    <div class="input-group-btn" ng-click="initTruckOwner('', truckOwnerSearch);">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
+           <!-- <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search" ng-model="truckOwnerSearch">
                 <span class="input-group-addon" ng-click="initTruckOwner('', truckOwnerSearch);"><i
                         class="glyphicon glyphicon-search"></i></span>
-            </div>
+            </div>-->
         </li>
         <div class="clearfix"></div>
     </ul>
