--- a/client/views/partials/admin/services/payments.html
+++ b/client/views/partials/admin/services/payments.html
@@ -35,10 +35,10 @@
             <td data-title="'GPS'" sortable="'payment.gpsEnabled'" class="clickable-item">
                 {{payment.gpsEnabled}}
             </td>
-            <td data-title="'GPS Reg Date'" sortable="'payment.erpDate'" class="clickable-item">
+            <td data-title="'ERP Reg Date'" sortable="'payment.erpDate'" class="clickable-item">
                 {{payment.erpDate  | date:'dd/MM/yyyy'}}
             </td>
-            <td data-title="'GPS Reg Date'" sortable="'payment.erpEnabled'" class="clickable-item">
+            <td data-title="'ERP'" sortable="'payment.erpEnabled'" class="clickable-item">
                 {{payment.erpEnabled}}
             </td>
             <td data-title="'Payment'" class="clickable-item">
