adding view orders api

--- a/client/views/partials/admin/orderProcess/editTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/editTruckRequest.html
@@ -86,7 +86,7 @@
                         <div class="form-group styling-input-list">
                             <input type="number" class="form-control order-form-control"
                                    ng-model="truckRequest.unloadingCharge" min="0"/>
-                            <label class="order-effect-for-input">Loading Charges*</label>
+                            <label class="order-effect-for-input">UnLoading Charges*</label>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-4">
